*

- Support for data collection using SM-CLP protocol
- Aggregated DCI values on cluster objects
- Transformation scripts for table DCIs
- Configurable DCI summary tables
- Default background color for new network maps made configurable
- Logged in users cannot be deleted
- Empty containters have "Normal" status instead of "Unknown"
- Management console:
	- Charts can be created from table data


*
* 1.2.7
*

- Simplified configuration of DCIs based on Windows performance counters
- Basic software inventory
- Network discovery improved
- Status of zone's proxy node now used in "node down" event correlation
- Configurable default DCI retention time and polling interval
- New NXSL functions: CreateNode, GetSumDCIValue
- New NXSL operator @ - safe get object's attribute
- New MIBs added: ASTARO-MIB, CPQHOST-MIB, CPQPOWER-MIB
- Special support for wireless switches
- Driver for Motorola/Symbol wireless switches
- Fixed bugs in template export/import
- Database manager: Fixed bugs in database export
- New parameters for Windows Security Center provided by WMI subagent:
	System.AntiSpywareProduct.Active
	System.AntiSpywareProduct.DisplayName
	System.AntiSpywareProduct.UpToDate
	System.AntiVirusProduct.Active
	System.AntiVirusProduct.DisplayName
	System.AntiVirusProduct.UpToDate
	System.FirewallProduct.Active
	System.FirewallProduct.DisplayName
	System.FirewallProduct.UpToDate
- Management console:
	- "Export to CSV" option added to most tabular data views
	- Auto login option for web console
	- Last values of selected DCIs can be shown in object tooltips
	  on network maps
- Fixed issues: #86, #199, #242, #246, #249, #250, #251, #256, #260, #268, #275


*
* 1.2.6
*

- DCI instance discovery
- nxshell: Python-based client-side scripting
- Array initializers in NXSL
- NXSL function PostEvent can use event names instead of event codes
- New NXSL functions: AgentReadParameter, CreateDCI, ManageObject, 
  SetInterfaceExpectedState, UnmanageObject
- Management console: